# server-monitoring-sys

./: README.md  asset-manifest.json  docker-compose.yml  index.html
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/models/: website.py
backend/src/services/: website_monitor.py
backend/static/: index.html
frontend/: .dockerignore  .env.production  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  WebsiteMonitorDashboard.js
frontend/src/components/ui/: AlertDialog.js  Button.js  Card.js  Input.js  MiniResponseChart.js  Tabs.js  TextField.js
frontend/src/pages/: MainDashboard.js  WebsiteMonitorDashboard.js
prometheus/: prometheus.yml
static/css/: main.6d39efb3.css  main.6d39efb3.css.map
static/js/: main.1a63217b.js  main.1a63217b.js.map  main.4dfae844.js  main.4dfae844.js.map  main.6493fdff.js  main.6493fdff.js.map  main.7512173d.js  main.7512173d.js.map  main.b4850591.js  main.b4850591.js.map
